[gd_scene load_steps=4 format=2]

[ext_resource path="res://UI/Games Screen/Games List Item.gd" type="Script" id=1]
[ext_resource path="res://UI/RichTextLabel Extended/RichTextLabel Extended.tscn" type="PackedScene" id=2]

[sub_resource type="StyleBoxFlat" id=1]
bg_color = Color( 0, 0, 0, 1 )
draw_center = false
border_width_left = 1
border_width_top = 1
border_width_right = 1
border_width_bottom = 1
border_color = Color( 0.129412, 0.219608, 0.403922, 1 )

[node name="Games List Item" type="PanelContainer"]
margin_right = 54.0
margin_bottom = 50.0
custom_styles/panel = SubResource( 1 )
script = ExtResource( 1 )

[node name="GameListItemContainer" type="HBoxContainer" parent="."]
margin_left = 1.0
margin_top = 1.0
margin_right = 57.0
margin_bottom = 49.0
mouse_filter = 2

[node name="PlayerClass" type="TextureRect" parent="GameListItemContainer"]
margin_right = 48.0
margin_bottom = 48.0
rect_min_size = Vector2( 48, 48 )
mouse_filter = 2
stretch_mode = 6

[node name="Ascended" parent="GameListItemContainer" instance=ExtResource( 2 )]
margin_left = 52.0
margin_top = 16.0
margin_right = 52.0
margin_bottom = 31.0
mouse_filter = 2
size_flags_vertical = 4

[node name="PlayerDataContainer" type="VBoxContainer" parent="GameListItemContainer"]
margin_left = 56.0
margin_right = 56.0
margin_bottom = 48.0
mouse_filter = 2
size_flags_horizontal = 3
alignment = 1

[node name="DateStarted" type="Label" parent="GameListItemContainer/PlayerDataContainer"]
margin_top = 8.0
margin_bottom = 22.0

[node name="DateEnded" type="Label" parent="GameListItemContainer/PlayerDataContainer"]
margin_top = 26.0
margin_bottom = 40.0

[connection signal="gui_input" from="." to="." method="_on_Games_List_Item_gui_input"]
